Bug 324451 - Project Filter: Entry is removed when pressing [Del] while editing pattern
Summary: Project Filter: Entry is removed when pressing [Del] while editing pattern
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: project (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 1.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-03 12:12 UTC by Benjamin Eikel
Modified: 2013-09-03 13:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Eikel 2013-09-03 12:12:50 UTC
I tried out the new project filter that was merged by Milian Wolff. I like the feature and, first of all, wanted to say thank you!

Reproducible: Always

Steps to Reproduce:
1. Exclude a directory that is located below the project using the context menu “Exclude item from project”. Let's call it “data”.
2. Go into the project configuration and “Project Filter“. A new entry with the pattern “/data/“ is shown in the list.
3. Edit the pattern and press the [Del] key on the keyboard to delete any character from the pattern string.
Actual Results:  
The entry containing the pattern that what just edited gets removed.

Expected Results:  
A character from the pattern string is removed.

The problem does not occur when pressing the [Backspace] key.
Comment 1 Milian Wolff 2013-09-03 13:05:43 UTC
Haha thanks for the report. That indeed is a bug I introduced. Will fix it!
Comment 2 Milian Wolff 2013-09-03 13:25:42 UTC
Git commit 8c2f1c5d1b92f0ca7d05476930573c6a935da6ad by Milian Wolff.
Committed on 03/09/2013 at 13:25.
Pushed by mwolff into branch 'master'.

Don't remove an item on Key_Delete when an editor is shown.

M  +7    -0    plugins/projectfilter/projectfilterkcm.cpp

http://commits.kde.org/kdevplatform/8c2f1c5d1b92f0ca7d05476930573c6a935da6ad