Don't remove an item on Key_Delete when an editor is shown.

BUG: 324451